@@ -1,3 +1,11 @@
+2021-01-26 [2.1.24]
+ * oprava zobrazovani sezon serialu
+
+2021-01-20 [2.1.23]
+ * vanoce jsou pryc
+ * uprava zobrazeni nazvu
+ * oprava mono zvuku
+
 2020-12-26 [2.1.21]
  * uprava zobrazeni vyberu streamu
  * uprava zobrazeni titulu pri prehravani
